--- a/docroot/themes/custom/site/templates/node/list-advanced/node--event--list-advanced.html.twig
+++ b/docroot/themes/custom/site/templates/node/list-advanced/node--event--list-advanced.html.twig
@@ -18,7 +18,8 @@
       {# Begin - period #}
       {% if content.field_vih_event_start_date and content.field_vih_event_end_date %}
         <div class="entity-list-advanced__image__overlay">
-         {{ content.start_end_str }}
+         {{ content.start_date_str }}
+         - {{ content.end_date_str }}
         </div>
       {% endif %}
       {# End - period #}
