--- a/docroot/themes/custom/site/templates/_partials/header.html.twig
+++ b/docroot/themes/custom/site/templates/_partials/header.html.twig
@@ -29,8 +29,8 @@
             <!-- Begin - tour -->
             <aside class="layout-header-tour">
                 <a href="{{ path('entity.node.canonical', {'node': theme_settings.header_bar.tour_url }) }}"><span
-                            class="icon icon-bookmark-o"></span> {{ 'Tour' | trans }}</a>
-                <span><strong>{{ 'It\'s free' | trans }}</strong></span>
+                            class="icon icon-bookmark-o"></span> {{ 'Guided tour' | trans }}</a>
+                <span><strong>{{ 'get your own impression' | trans }}</strong></span>
             </aside>
             <!-- End - tour -->
         {% endif %}
