--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_my-course.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_my-course.scss
@@ -21,6 +21,7 @@
 // --------------------------------------------------
 
 .boxy--my-course {
+  min-height: 130px;
 
   .boxy__body {
     display: flex;
