--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_my-course.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_my-course.scss
@@ -37,16 +37,20 @@
     }
   }
 
+  .photo {
+    flex-grow: 1;
+
+    img {
+      max-width: 150px;
+    }
+  }
+
   .boxy__image {
     padding-right: 0;
 
     margin-top: 0 - $boxy-body-spacing-top-bottom;
     margin-bottom: 0 - $boxy-body-spacing-top-bottom;
     margin-left: 0 - $boxy-spacing-left-right;
-
-    img {
-      max-width: 150px;
-    }
   }
 }
 
@@ -76,7 +80,7 @@
       flex-grow: 1;
       justify-content: center;
 
-      padding: 0;
+      padding-left: 0;
     }
   }
 }
