--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_my-course.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_my-course.scss
@@ -48,6 +48,10 @@
     margin-bottom: 0 - $boxy-body-spacing-top-bottom;
     margin-left: 0 - $boxy-spacing-left-right;
   }
+
+  .field {
+    margin-bottom: 0;
+  }
 }
 
 // --------------------------------------------------
