VI-328 Confirmation pages adjustments

--- a/docroot/modules/custom/vies_application/templates/vies-application-submit-message.html.twig
+++ b/docroot/modules/custom/vies_application/templates/vies-application-submit-message.html.twig
@@ -8,9 +8,7 @@
         {{ message }}
       </div>
 
-      <a href="{{ url('<front>') }}" class="btn btn-primary">
-          {{ "Go back to home"|t }}
-      </a>
+      {{ backlink }}
     </div>
   </div>
 </section>
