--- a/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
@@ -33,9 +33,8 @@ $modal-margin: 70px;
   background-color: rgba($modal-backdrop-bg, $modal-backdrop-opacity);
 
   .modal-content {
-    overflow-x: scroll;
+    overflow-x: auto;
   }
-  
 }
 
 .modal-header {
