--- a/docroot/themes/custom/site/src/styles/theme/components/_vies-application-form.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_vies-application-form.scss
@@ -23,5 +23,16 @@
         margin-top: 0;
       }
     }
+
+    legend {
+      .fieldset-legend {
+        color: #888;
+        font-size: 16px;
+        text-transform: none;
+        font-family: Lato, sans-serif;
+        letter-spacing: normal;
+        font-weight: bold;
+      }
+    }
   }
 }
