VI-380 Views must have 'vih_' prefix.

--- a/docroot/themes/custom/site/templates/user/full/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/full/user.html.twig
@@ -48,7 +48,7 @@
 
                 </div>
 
-                {% if(content.view_my_classes_nodes or content.view_my_classes_terms) %}
+                {% if(content.view_vih_my_classes_nodes or content.view_my_classes_terms) %}
                     <div class="row">
                         <div class="col-xs-12">
 
@@ -59,8 +59,8 @@
                                     </h3>
                                 </div>
                                 <div class="partial__body">
-                                    {{ content.view_my_classes_nodes }}
-                                    {{ content.view_my_classes_terms }}
+                                    {{ content.view_vih_my_classes_nodes }}
+                                    {{ content.view_vih_my_classes_terms }}
                                 </div>
                             </div>
 
