--- a/docroot/themes/custom/site/src/styles/_shared.scss
+++ b/docroot/themes/custom/site/src/styles/_shared.scss
@@ -1,5 +1,5 @@
 @import "mixins/loader";
-@import "variables/loader";
+@import "variables/shared/loader";
 @import "vendor";
 
 // Drupal 8 specific overrides (load from Bootstrap theme in themes/contrib/bootstrap)
