--- a/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
@@ -16,11 +16,11 @@
 <div class="entity-list-advanced__body">
 
     {# Begin - short description #}
-    <div class="entity-list-advanced__heading">
-        <h2 class="entity-list-advanced__heading__title heading-h4">
-          {{ name }}
-        </h2>
-    </div>
+    {#<div class="entity-list-advanced__heading">#}
+        {#<h2 class="entity-list-advanced__heading__title heading-h4">#}
+          {#{{ name }}#}
+        {#</h2>#}
+    {#</div>#}
     {# End - short description #}
 
     {# Begin - short description #}
