--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_file.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/field/_file.scss
@@ -16,7 +16,7 @@
 
 .paragraph {
 
-  .field--name-file {
+  .field--name-field-vih-file {
     text-align: center;
 
     // Resets
@@ -59,7 +59,7 @@
   // Background image
   &.sectioned--skewed--background-image {
 
-    .field--name-file {
+    .field--name-field-vih-file {
 
       .file {
 
@@ -99,7 +99,7 @@
   // White
   &.sectioned--skewed--background-color-white {
 
-    .field--name-file {
+    .field--name-field-vih-file {
 
       .file {
 
@@ -132,7 +132,7 @@
   // Light gray
   &.sectioned--skewed--background-color-light-gray {
 
-    .field--name-file {
+    .field--name-field-vih-file {
 
       .file {
 
@@ -165,7 +165,7 @@
   // Gray
   &.sectioned--skewed--background-color-gray {
 
-    .field--name-file {
+    .field--name-field-vih-file {
 
       .file {
 
@@ -198,7 +198,7 @@
   // Primary
   &.sectioned--skewed--background-color-primary {
 
-    .field--name-file {
+    .field--name-field-vih-file {
 
       .file {
 
@@ -238,7 +238,7 @@
   // Secondary
   &.sectioned--skewed--background-color-secondary {
 
-    .field--name-file {
+    .field--name-field-vih-file {
 
       .file {
 
