--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -44,27 +44,19 @@
                         <div class="row">
                             <div class="col-sm-6">
 
-                                {# Begin - headings #}
-                                {% if node.field_vih_course_heading.value or node.field_vih_course_subheading.value %}
+                                <!-- Begin - heading -->
+                                <div class="sectioned__heading">
+                                    <h2 class="sectioned__heading__title">{{ label }}</h2>
+                                </div>
+                                <!-- End - heading -->
 
-                                    {% if node.field_vih_course_heading.value %}
-                                        <!-- Begin - heading -->
-                                        <div class="sectioned__heading">
-                                            <h2 class="sectioned__heading__title">{{ content.field_vih_course_heading.0 }}</h2>
-                                        </div>
-                                        <!-- End - heading -->
-                                    {% endif %}
-
-                                    {% if node.field_vih_course_subheading.value %}
-                                        <!-- Begin - subheading -->
-                                        <div class="sectioned__subheading">
-                                            <h3 class="sectioned__subheading__title heading-h4">{{ content.field_vih_course_subheading.0 }}</h3>
-                                        </div>
-                                        <!-- End - subheading -->
-                                    {% endif %}
-
+                                {% if node.field_vih_course_subheading.value %}
+                                    <!-- Begin - subheading -->
+                                    <div class="sectioned__subheading">
+                                        <h3 class="sectioned__subheading__title heading-h4">{{ content.field_vih_course_subheading.0 }}</h3>
+                                    </div>
+                                    <!-- End - subheading -->
                                 {% endif %}
-                                {# End - headings #}
 
                                 {# Begin - period #}
                                 {% if content.course_period_start or content.course_period_end %}
