--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -47,8 +47,8 @@
                             <div class="container">
                                 <div class="banner__heading">
 
-                                    {% if node.title.value %}
-                                        <h1 class="banner__heading__title">{{ node.title.value }}</h1>
+                                    {% if node.field_vih_top_banner_text.value %}
+                                        <h1 class="banner__heading__title">{{ node.field_vih_top_banner_text.value }}</h1>
                                     {% elseif user_displayed.field_vih_top_banner_text.value %}
                                         <h1 class="banner__heading__title">{{ user_displayed.field_vih_top_banner_text.value }}</h1>
                                     {% elseif term.field_vih_top_banner_text.value %}
