--- a/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu-mobile.html.twig
+++ b/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu-mobile.html.twig
@@ -1,56 +1,17 @@
-{#
-/**
- * @file
- * Default theme implementation to display a menu.
- *
- * Available variables:
- * - menu_name: The machine name of the menu.
- * - items: A nested list of menu items. Each menu item contains:
- *   - attributes: HTML attributes for the menu item.
- *   - below: The menu item child items.
- *   - title: The menu link title.
- *   - url: The menu link url, instance of \Drupal\Core\Url
- *   - localized_options: Menu link localized options.
- *
- * @ingroup templates
- */
-#}
-{% import _self as menus %}
-
-{#
-  We call a macro which calls itself to render the full tree.
-  @see http://twig.sensiolabs.org/doc/tags/macro.html
-#}
-
-{{ menus.menu_links(items, attributes, 0, menu_name|clean_class) }}
-
-{% macro menu_links(items, attributes, menu_level, menu_name) %}
-  {% import _self as menus %}
+{% macro menu_links(items, attributes, menu_level, classes) %}
   {% if items %}
     <ul>
-    {% for item in items %}
-      {% if menu_level == 0 and item.is_expanded %}
-        <li{{ item.attributes.addClass(item_classes) }}>
-
-        {% if item.below %}
-          <a href="#">{{ item.title }}</a>
-        {% else %}
+      {% for item in items %}
+        <li>
           <a href="{{ item.url }}">{{ item.title }}</a>
-        {% endif %}
-      {% else %}
-        <li{{ item.attributes.addClass(item_classes) }}>
 
-            {% if item.below %}
-                <a href="#">{{ item.title }}</a>
-            {% else %}
-                {{ link(item.title, item.url) }}
-            {% endif %}
-      {% endif %}
-      {% if item.below %}
-        {{ menus.menu_links(item.below, attributes.removeClass('nav'), menu_level + 1, menu_name) }}
-      {% endif %}
-      </li>
-    {% endfor %}
+          {% if item.below %}
+            {{ _self.menu_links(item.below, attributes.removeClass(classes), menu_level + 1, classes) }}
+          {% endif %}
+        </li>
+      {% endfor %}
     </ul>
   {% endif %}
 {% endmacro %}
+
+{{ _self.menu_links(items, attributes, 0, null) }}
