VI-408 Short courses - add From to the Price per perticipant and show options

--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_price.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_price.scss
@@ -34,6 +34,9 @@
   #vih-event-price {
     display: inline-block;
   }
+  .field-vih-sc-price-container{
+    display: inline-flex;
+  }
 }
 
 // --------------------------------------------------
