--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -110,7 +110,10 @@ view_mode ? view_mode|clean_class,
                                         </div>
 
                                         <div class="boxy__body">
-                                            {{ content.field_vih_sc_price }}
+                                            <div class="field-vih-sc-price-container">
+                                                <div class="field-vih-sc-price">{{ "From" | trans }}</div> 
+                                                &nbsp;{{ content.field_vih_sc_price  }}
+                                            </div>
                                         </div>
                                     </div>
                                 {% endif %}
