--- a/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_modal.scss
@@ -89,10 +89,11 @@ $modal-margin: 70px;
 }
 
 .modal-title {
-  color: #fff;
-
   margin: 0;
   padding: 0;
+
+  color: #fff;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
 }
 
 .modal-body {
