--- a/docroot/themes/custom/site/templates/user/full/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/full/user.html.twig
@@ -52,17 +52,31 @@
                     <div class="row">
                         <div class="col-xs-12">
 
-                            <div class="partial">
-                                <div class="partial__heading">
-                                    <h3 class="partial__heading__title">
-                                        {{ 'Classes' | trans }}
-                                    </h3>
+                            {% if content.view_vih_my_classes_nodes %}
+                                <div class="partial">
+                                    <div class="partial__heading">
+                                        <h3 class="partial__heading__title">
+                                            {{ 'Courses' | trans }}
+                                        </h3>
+                                    </div>
+                                    <div class="partial__body">
+                                        {{ content.view_vih_my_classes_nodes }}
+                                    </div>
                                 </div>
-                                <div class="partial__body">
-                                    {{ content.view_vih_my_classes_nodes }}
-                                    {{ content.view_vih_my_classes_terms }}
+                            {% endif %}
+
+                            {% if content.view_vih_my_classes_terms %}
+                                <div class="partial">
+                                    <div class="partial__heading">
+                                        <h3 class="partial__heading__title">
+                                            {{ 'Classes' | trans }}
+                                        </h3>
+                                    </div>
+                                    <div class="partial__body">
+                                        {{ content.view_vih_my_classes_terms }}
+                                    </div>
                                 </div>
-                            </div>
+                            {% endif %}
 
                         </div>
                     </div>
