--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -183,7 +183,7 @@
 
                                                 <div class="panel-group__heading">
                                                     <h4 class="panel-group__heading__title">
-                                                        {{ 'Mix and match you subjects' | trans }}
+                                                        {{ 'Mix and match your subjects' | trans }}
                                                     </h4>
                                                 </div>
 
