--- a/docroot/themes/custom/site/templates/page/page--webform.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--webform.html.twig
@@ -30,15 +30,15 @@
 
             {% else %}
 
-                {% if node.field_banner.value or user.field_banner.value or term.field_banner.value %}
+                {% if node.field_vih_top_banner.value or user_displayed.field_vih_top_banner.value or term.field_vih_top_banner.value %}
 
                     {# Begin - image #}
-                    {% if node.field_banner.value %}
-                        {% set banner_background_image = node.field_banner.entity.fileuri | image_style('banner_small') %}
-                    {% elseif user.field_banner.value %}
-                        {% set banner_background_image = user.field_banner.entity.fileuri | image_style('banner_small') %}
-                    {% elseif term.field_banner.value %}
-                        {% set banner_background_image = term.field_banner.entity.fileuri | image_style('banner_small') %}
+                    {% if node.field_vih_top_banner.value %}
+                        {% set banner_background_image = node.field_vih_top_banner.entity.image.entity.fileuri | image_style('banner_small') %}
+                    {% elseif user_displayed.field_vih_top_banner.value %}
+                        {% set banner_background_image = user_displayed.field_vih_top_banner.entity.image.entity.fileuri | image_style('banner_small') %}
+                    {% elseif term.field_vih_top_banner.value %}
+                        {% set banner_background_image = term.field_vih_top_banner.entity.image.entity.fileuri | image_style('banner_small') %}
                     {% endif %}
                     {# End - image #}
 
@@ -47,14 +47,14 @@
                             <div class="container">
                                 <div class="banner__heading">
 
-                                    {% if node.title.value %}
-                                        <h1 class="banner__heading__title">{{ node.title.value }}</h1>
-                                    {% elseif user.title.value %}
-                                        <h1 class="banner__heading__title">{{ user.title.value }}</h1>
-                                    {% elseif term.name.value %}
-                                        <h1 class="banner__heading__title">{{ term.name.value }}</h1>
+                                    {% if node.field_vih_top_banner_text.value %}
+                                        <h1 class="banner__heading__title">{{ node.field_vih_top_banner_text.value }}</h1>
+                                    {% elseif user_displayed.field_vih_top_banner_text.value %}
+                                        <h1 class="banner__heading__title">{{ user_displayed.field_vih_top_banner_text.value }}</h1>
+                                    {% elseif term.field_vih_top_banner_text.value %}
+                                        <h1 class="banner__heading__title">{{ term.field_vih_top_banner_text.value }}</h1>
                                     {% elseif page['#title'] %}
-                                        <h1 class="banner__heading__title">{{ page['#title'] }}</h1>
+                                        <h1 class="banner__heading__title">{{ page['#title'] | raw }}</h1>
                                     {% endif %}
 
                                 </div>
@@ -85,13 +85,21 @@
                     <!-- Begin - content -->
                     <a id="main-content"></a>
 
-                    <section class="sectioned sectioned--content">
-                        <div class="sectioned__inner">
-                            <div class="container">
-                                <h1>404</h1>
+                    <div class="container">
+                        <h1>{{ page['#title'] | raw }}</h1>
+                    </div>
+
+                    {% if node or user %}
+                        {{ page.content }}
+                    {% else %}
+                        <section class="sectioned sectioned--content">
+                            <div class="sectioned__inner">
+                                <div class="container">
+                                    {{ page.content }}
+                                </div>
                             </div>
-                        </div>
-                    </section>
+                        </section>
+                    {% endif %}
                     <!-- End - content -->
                 {% endblock %}
             </div>
