--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -315,6 +315,19 @@
                     {% endif %}
                     {# End - action button #}
 
+                    {# Begin - teacher #}
+                    {% if node.field_vih_cource_contact_person.value %}
+                        <div class="partial partial--teacher">
+                            <div class="partial__heading">
+                                <h2 class="partial__heading__title heading-h4">{{ 'Do you have any questions about this course?' | trans }}</h2>
+                            </div>
+                            <div class="partial__body">
+                                {{ content.field_vih_cource_contact_person }}
+                            </div>
+                        </div>
+                    {% endif %}
+                    {# End - teacher #}
+
                     {# Begin - enquire button #}
                     {% if content.is_active and content.can_be_subscribed and content.enquire_prices_page_international %}
                         <div class="partial partial--action-button partial--action-button--enquire-prices">
