--- a/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
@@ -63,6 +63,10 @@
                 {# Begin - body #}
                 <div class="modal-body">
                     {{ content.description }}
+
+                    {# Begin - paragraphs #}
+                    {{ content.field_vih_paragraphs }}
+                    {# End - paragraphs #}
                 </div>
                 {# End - body #}
 
