VI-420 configurable registration pages texts

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
@@ -14,7 +14,7 @@
             {# Introduction information START #}
             <div class="partial">
                 <div class="partial__body">
-                    <p>{{ "You can sign up, as many as you'd like. You will add one person at a time in the form below."|t }}</p>
+                    <p>{{ form['#registration_text'] }}</p>
 
                     <a href="{{ form['#event']['url'] }}" class="btn btn-default">
                         {{ "Back to event" | trans }}
