--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -9,7 +9,7 @@
             {# Introduction information START #}
             <div class="partial">
                 <div class="partial__body">
-                    <p>{{ "Her kan du se og vælge dine fag. Kun et fag kan vælges pr. idrætsblok."|t }} {{ "Når du har valgt, bedes du udfylde og indsende nedenståede og indsende nedestående oplysninger."|t }}</p>
+                    <p>{{ form['#registration_text'] }}</p>
                 </div>
             </div>
             {# Introduction information END #}
