--- a/docroot/themes/custom/site/src/styles/variables/shared/_additional-bootstrap-colors.scss
+++ b/docroot/themes/custom/site/src/styles/variables/shared/_additional-bootstrap-colors.scss
@@ -28,10 +28,10 @@ $headings-color-dark: $text-color-dark;
 $headings-color-secondary: $headings-color;
 
 // Secondary
-$brand-secondary: #ff6400;
+$brand-secondary: #ff6400 !default;
 
 // Tertiary
-$brand-tertiary: #00c808;
+$brand-tertiary: #00c808 !default;;
 
 // Quaternary
-$brand-quaternary: #6e00e9;
+$brand-quaternary: #6e00e9 !default;;
