--- a/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-banner-slide.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/full/paragraph--vih-banner-slide.html.twig
@@ -3,7 +3,7 @@
     <!-- Begin - logo -->
     <div class="banner__logo">
         <svg width='100%' height='100%' viewBox="0 0 100 100" preserveAspectRatio="none">
-            <polygon points="107 0, 0 100, 100 100" fill="rgba(0, 188, 255, 0.85)" id="svgoverlay" />
+            <polygon points="107 0, 0 100, 100 100" id="svgoverlay" />
         </svg>
 
         <div class="banner__logo__image"></div>
